Fix? vertical align menu

--- a/styles/main.less
+++ b/styles/main.less
@@ -245,8 +245,16 @@ body {
    }
 
    &--items {
-      position: relative;
-      top: 50%;
+      //position: relative;
+      //top: 50%;
+      display: inline-block;
+      vertical-align: middle;
+   }
+
+   &--aligner {
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
    }
 
    &--item {
